ADD: Added CVE report to HTML
Added CVE report (count) with direct link to osv.org for now.

Next Steps:
 - Separate issue to abstract out OSV.dev
 - Refactor back CVE severity score instead of converstion to categories
   since there's apparently standard, so likely other source will be compatible
   or has clear conversion.
 - Add larger scores highlights above the table with report data (separate issue)

--- a/src/ossiq/presentation/html_templates/tag_versions_difference.html
+++ b/src/ossiq/presentation/html_templates/tag_versions_difference.html
@@ -14,7 +14,7 @@
     {% elif comparison.diff_index == diff_types.DIFF_PATCH %}
     <span class="material-symbols-rounded text-base text-gray-500 dark:text-gray-300 text-xl mr-2">timer</span>
     <span
-        class="px-3 py-1 rounded-full bg-blue-500 dark:bg-blue-700/60 text-blue-500 dark:text-blue-200 text-sm font-bold">
+        class="px-3 py-1 rounded-full bg-blue-500 text-white dark:bg-blue-700/60 text-blue-500 dark:text-blue-200 text-sm font-bold">
         PATCH
     </span>
     {% else %}
