MOD: Finalized initial draft of the documentation
 - finilized draft of documentation
 - finilized landing page and MkDocs configuration
 - aligned slogan everywhere

GH-1

--- a/src/ossiq/presentation/overview/html_templates/main.html
+++ b/src/ossiq/presentation/overview/html_templates/main.html
@@ -44,7 +44,7 @@
       <!-- Logo -->
       <div class="flex items-center space-x-2">
         <span class="text-xl font-normal tracking-wide">OSS IQ</span>
-        <span class="text-xs pl-5">External Dependencies Intelligence Swissknife</span>
+        <span class="text-xs pl-5">Dependencies Intelligence</span>
       </div>
 
       <!-- GitHub Link -->
