ADD: Added --registry-type option and changed behavior for --output option
Added --registry-type option to narrow down a specific registry for
case when two different ecosystem projects are in the same folder.

Changed --output option behavior, so that by default it would
generate overview_report_{project_name}.html in the current
directory, otherwise custom name would be used provided with
this option.

GH-4

--- a/src/ossiq/presentation/overview/html_templates/main.html
+++ b/src/ossiq/presentation/overview/html_templates/main.html
@@ -43,12 +43,12 @@
 
       <!-- Logo -->
       <div class="flex items-center space-x-2">
-        <span class="text-xl font-normal tracking-wide">OSS IQ</span>
+        <a href="http://ossiq.dev/" target="_blank" class="text-xl font-normal tracking-wide">OSS IQ</a>
         <span class="text-xs pl-5">Dependencies Intelligence</span>
       </div>
 
       <!-- GitHub Link -->
-      <a href="https://github.com/" class="flex items-center space-x-1 text-gray-700 dark:text-gray-300 
+      <a href="https://github.com/ossiq/ossiq/" target="_blank" class="flex items-center space-x-1 text-gray-700 dark:text-gray-300 
                 hover:text-black dark:hover:text-white transition font-medium">
         <span class="material-symbols-rounded text-xl">code</span>
         <span>GitHub</span>
